# Computational-Geometry

./: .gitignore  LICENSE  LICENSE.BSD3  README.md  RELEASE_HISTORY.md
file-formats/: dmat.html  index.html  tgf.html
include/igl/: AABB.cpp  Camera.h  ConjugateFFSolverData.h  REDRUM.h  WindingNumberTree.h  adjacency_matrix.cpp  angle_bound_frame_fields.cpp  angle_bound_frame_fields.h  arap_dof.cpp  arap_dof.h  barycenter.cpp  bbw.h  bijective_composite_harmonic_mapping.h  boundary_conditions.cpp  cat.h  colormap.cpp  colormap.h  combine.cpp  combine.h  conjugate_frame_fields.cpp  conjugate_frame_fields.h  connect_boundary_to_infinity.h  cotmatrix.h  cotmatrix_entries.cpp  crouzeix_raviart_cotmatrix.cpp  crouzeix_raviart_massmatrix.cpp  cumsum.cpp  cut_mesh.cpp  delaunay_triangulation.cpp  directed_edge_parents.h  edges.cpp  exterior_edges.cpp  exterior_edges.h  extract_manifold_patches.cpp  facet_components.h  field_local_global_conversions.cpp  field_local_global_conversions.h  flip_edge.cpp  flood_fill.cpp  grad.cpp  (+86 more)
include/igl/copyleft/: marching_cubes.cpp  offset_surface.cpp  offset_surface.h
include/igl/copyleft/cgal/: CGAL_includes.hpp  SelfIntersectMesh.h  assign.cpp  assign_scalar.cpp  assign_scalar.h  cell_adjacency.cpp  cell_adjacency.h  closest_facet.cpp  extract_cells.cpp  half_space_box.cpp  insert_into_cdt.cpp  insert_into_cdt.h  intersect_other.h  intersect_with_half_space.cpp  mesh_boolean.cpp  minkowski_sum.cpp  order_facets_around_edge.cpp  order_facets_around_edge.h  outer_element.cpp  outer_facet.cpp  outer_facet.h  point_mesh_squared_distance.cpp  points_inside_component.cpp  projected_cdt.cpp  projected_cdt.h  propagate_winding_numbers.cpp  remesh_intersections.cpp  remesh_intersections.h  remesh_self_intersections.cpp  trim_with_solid.cpp  wire_mesh.cpp  wire_mesh.h
include/igl/copyleft/comiso/: miq.h  nrosy.h
include/igl/copyleft/tetgen/: cdt.h  read_into_tetgenio.h
include/igl/embree/: EmbreeIntersector.h
include/igl/lim/: lim.h
include/igl/matlab/: mexErrMsgTxt.cpp  mexErrMsgTxt.h  validate_arg.h
include/igl/mosek/: bbw.h  mosek_linprog.cpp  mosek_quadprog.cpp
include/igl/opengl/: gl.h  load_shader.cpp  load_shader.h
include/igl/opengl/glfw/: background_window.cpp  background_window.h  map_texture.cpp  map_texture.h
include/igl/opengl2/: MouseController.h  gl.h  lens_flare.cpp  lens_flare.h  render_to_tga.cpp  render_to_tga.h  texture_from_tga.h  tga.cpp  unproject_to_zero_plane.h
include/igl/png/: readPNG.cpp  render_to_png.cpp  render_to_png.h  render_to_png_async.cpp  render_to_png_async.h  texture_from_png.cpp  texture_from_png.h  writePNG.cpp
include/igl/viewer/: OpenGL_shader.cpp  OpenGL_shader.h  OpenGL_state.cpp  OpenGL_state.h  TODOs.txt  TextRenderer.cpp  TextRenderer.h  TextRenderer_fonts.cpp  TextRenderer_fonts.h  Viewer.cpp  Viewer.h  ViewerCore.cpp  ViewerCore.h  ViewerData.cpp  ViewerData.h  ViewerPlugin.h
include/igl/xml/: XMLSerializable.h  serialize_xml.h  writeDAE.cpp
optional/: CMakeLists.txt  README.md  index.html
scripts/: clone-and-build.sh  h2pair.sh  pre-commit.sh
shared/cmake/: CMakeLists.txt  FindCGAL.cmake  FindMATLAB.cmake  FindMOSEK.cmake
tutorial/: CMakeLists.txt  tutorial.md
tutorial/conformal_mapping/: CMakeLists.txt  main.cpp
tutorial/conformal_mapping/src/: main.cpp
tutorial/harmonic-1-form/: CMakeLists.txt
tutorial/harmonic-1-form/include/: FindClosedLoop.h  HarmonicForm.h  HomologyGroup.h  LibiglShowLines.h  MeshViewer.h  calc_uv.h  closed_loop.h  convert_to_libigl.h  libigl_show_line.h  openmesh_traits.h
tutorial/harmonic-1-form/src/: calc_uv.cpp  closed_loop.cpp  convert_to_libigl.cpp  libigl_show_line.cpp  main.cpp
